--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "@tanstack/react-query": "^5.8.7",
     "axios": "^1.6.2",
-    "next": "14.0.3",
-    "react": "^18",
+    "next": "^14.0.3",
+    "react": "^18.2.0",
     "react-dom": "^18"
   },
   "devDependencies": {
